<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".presentation.detail.DetailFragment"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey">

        <ImageView
            android:id="@+id/iv_resto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_resto"
            android:contentDescription="@string/resto_iamge" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:alpha="0.7"
            android:backgroundTint="@color/light_grey"
            android:src="@android:drawable/ic_menu_revert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_to_previous_page" />
        <View
            android:id="@+id/view_transparent_black"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/iv_resto"
            app:layout_constraintEnd_toEndOf="@id/iv_resto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_resto" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_resto">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:textSize='16sp' />

                <TextView
                    android:id="@+id/tv_menu"
                    style="@style/list_title"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_desc"
                    android:text="@string/popular_menu"
                    android:textColor="@color/dark_blue" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_menu" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_restaurant"
            style="@style/list_title"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama_restoran"
            android:textColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="@id/view_transparent_black"
            app:layout_constraintBottom_toTopOf="@id/tv_city" />

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/view_transparent_black"
            app:layout_constraintStart_toStartOf="@id/tv_restaurant"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant"
            android:contentDescription="@string/ic_location" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            style="@style/list_city"
            app:layout_constraintStart_toEndOf="@+id/ic_location"
            app:layout_constraintBottom_toBottomOf="@id/view_transparent_black"  />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintRight_toLeftOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating"
            android:contentDescription="@string/ic_rating" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/list_rating"
            android:textColor="@color/light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_0_0"
            android:textSize='38sp'
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_restaurant" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:tint="@color/light_grey"
            android:contentDescription="@string/add_or_remove_favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout >
</androidx.constraintlayout.widget.ConstraintLayout>
