<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment"
    android:background="@color/dark_blue">

    <View
        android:id="@+id/greeting"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/container_greeting"
        app:layout_constraintBottom_toTopOf="@+id/container_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet_msg"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/greeting"
        app:layout_constraintEnd_toEndOf="@id/greeting"
        app:layout_constraintStart_toStartOf="@+id/greeting"
        app:layout_constraintTop_toTopOf="@+id/greeting" />

    <ImageView
        android:id="@+id/favorite_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/navigate_to_favorite_page"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greeting"
        app:layout_constraintTop_toTopOf="@+id/greeting" />

    <View
        android:id="@+id/container_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_list_home"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/container_list"
        app:layout_constraintRight_toRightOf="@id/container_list"
        app:layout_constraintTop_toTopOf="@id/container_list" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/error_msg"/>


</androidx.constraintlayout.widget.ConstraintLayout>